# 3DPointCloudClassification_GUI

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  Dockerfile  README.md  benchmarkAndVisualize.cpp  classification.cpp  classification.h  cloudFactory.cpp  cloudFactory.h  configuration.cpp  edit.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  pointCloud.h  prepareDataset.cpp  prepareDatasetController.cpp  prepareDatasetController.h  projection.h  qdebugStream.h  requirements.txt  saveLoad.cpp  saveSettings.ui  segmentation.h  threadController.cpp  threadController.h  typeDefForThreding.h
benchmark/: class_mapping.txt
configurations/: CNN_binary_Map_person_edited_3x3_KITTI.txt  CNN_range_SemanticKITTI_IGN.txt  CNN_range_SemanticKITTI_KITTI.txt
embedded_python/: ModelTesting.py  model.py
example_scenes/: 0000000003.pcd  IGN_Z0_car_1.pcd
lib/: CMakeLists.txt  Python_wrapper.h  helperFunctions.h  qdebugStream.h
lib/pyboostcvconverter/: pyboost_cv3_converter.cpp  pyboost_cv3_converter.cpp.bak  pyboostcvconverter.hpp
pyboostcvconverter/: pyboost_cv3_converter.cpp  pyboostcvconverter.hpp
src/: CMakeLists.txt
src/controller/: pointCloudController.cpp  pointCloudController.cpp.bak  pointCloudController.h  pointCloudController.h.bak  prepareDatasetController.cpp  prepareDatasetController.h  threadController.cpp  threadController.cpp.bak  threadController.h  threadController.h.bak  typeDefForThreding.h  typeDefForThreding.h.bak
src/core/: benchmarkAndVisualize.cpp  benchmarkAndVisualize.h  classification.cpp  cloudFactory.cpp  edit.h  pointCloud.cpp  prepareDataset.h  projection.cpp  segmentation.cpp
src/model/: benchmarkAndVisualize.cpp  benchmarkAndVisualize.cpp.bak  benchmarkAndVisualize.h  benchmarkAndVisualize.h.bak  classification.cpp  classification.cpp.bak  classification.h  cloudFactory.cpp  cloudFactory.h  edit.cpp  edit.cpp.bak  edit.h  pointCloud.cpp  pointCloud.h  prepareDataset.cpp  prepareDataset.cpp.bak  prepareDataset.h  projection.cpp  projection.cpp.bak  projection.h  segmentation.cpp  segmentation.h
src/ui/: mainwindow.ui  mainwindow.ui.bak  memorySettings.ui  saveSettings.ui
src/view/: .mainwindow.h.swp  configuration.cpp  configuration.cpp.bak  configuration.h  main.cpp  mainwindow.cpp  mainwindow.cpp.bak  mainwindow.h  mainwindow.h.bak  memorySettings.cpp  memorySettings.h  saveLoad.cpp  saveLoad.cpp.bak  saveLoad.h  saveSettings.cpp  saveSettings.cpp.bak  saveSettings.h
temp/: docker-compose.yml  myConsoleStream.cpp  myConsoleStream.h  saveSettingsController.cpp  saveSettingsController.h
tests/: CMakeLists.txt  test_classification.cpp
trained_models/: INFO_CNN_binary_3D_Map_person_1  INFO_CNN_range_3D_BIWI  INFO_CNN_range_SemanticKITTI  ReadMe
trained_models/CNN_binary_3D_Map_person_1/: INFO  my-model.index
trained_models/CNN_range_3D_BIWI/: INFO  label.txt  my-model.index
